# echo-service

./: .dockerignore  .gitignore  .releaserc  Dockerfile  LICENSE  README.md  pyproject.toml
.github/actions/build-and-push/: action.yaml
.github/workflows/: release.yaml
echo_service/: __init__.py  main.py  models.py  utils.py
echo_service/static/: style.css
echo_service/templates/: base.html  detail.html  index.html
echo_service/tests/: test_webhook.py
